第8章の「Think Simple」セクションにおいて、テキストのフォーマットを改善し、読みやすさを向上させるために改行を追加

--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -51,27 +51,27 @@
 
 例えば、次のような問題を考えてみよう:
 
->「キリンを冷蔵庫に入れるにはどうする?」
+>「キリンを冷蔵庫に入れるにはどうする?」<br>
 >(“How do you put a giraffe into a refrigerator?")
 
 どうだろう。様々な考えが浮かぶかも知れない:
 
->キリンを小さくする? 特大の冷蔵庫を日立に頼んで特別に作ってもらう? 当然キリンは切っちゃ駄目?
-小さいキリンっている?
+>キリンを小さくする? 特大の冷蔵庫を日立に頼んで特別に作ってもらう?<br>
+>当然キリンは切っちゃ駄目だよね? 小さいキリンっている?
 
 だが、この問題の答えはこうだ:
 
->「冷蔵庫のドアを開けて、キリンを入れ、ドアを閉める」
+>「冷蔵庫のドアを開けて、キリンを入れ、ドアを閉める」<br>
 >(“Open the refrigerator, put in the giraffe and close the door.")
 
 続けて、次の問題に答えてみてほしい:
 
->「ゾウを冷蔵庫に入れるにはどうする?」
+>「ゾウを冷蔵庫に入れるにはどうする?」<br>
 >(“How do you put an elephant into a refrigerator?")
 
 答えはこうだ:
 
->「冷蔵庫のドアを開けて、キリンを取り出し、ゾウを入れ、ドアを閉める」
+>「冷蔵庫のドアを開けて、キリンを取り出し、ゾウを入れ、ドアを閉める」<br>
 >(“Open the refrigerator, take out the giraffe, put in the elephant and close the door.")
 
 シンプルに考える。正解が重要なのではなく、考え方をみてほしい。
@@ -80,11 +80,11 @@
 
 次に挙げるのは、AIを現場に導入しようとしている2人の開発者の会話だ:
 
->開発者A:「AIを現場に導入していきましょう」
->開発者B:「でもノウハウを持った経験者がいませんからね」
->開発者A:「最初は試行錯誤が続くかもしれませんが、これから少しずつ勉強をしながら経験を積んでいくべきかと」
->開発者B:「でもいまは忙しい時期ですし。それに上の人間はきっと反対しますよ」
->開発者A:「そういって先延ばししていてはいつまでたっても現状のままですから、徐々にやっていきましょうよ。実績を積んでいけば、上も説得できますし」
+>開発者A:「AIを現場に導入していきましょう」<br>
+>開発者B:「でもノウハウを持った経験者がいませんからね」<br>
+>開発者A:「最初は試行錯誤が続くかもしれませんが、これから少しずつ勉強をしながら経験を積んでいくべきかと」<br>
+>開発者B:「でもいまは忙しい時期ですし。それに上の人間はきっと反対しますよ」<br>
+>開発者A:「そういって先延ばししていてはいつまでたっても現状のままですから、徐々にやっていきましょうよ。実績を積んでいけば、上も説得できますし」<br>
 >開発者B:「徐々にじゃ、なかなか効果が見えてこないですね」
 
 前もってリスクを適切に評価するのは重要なことだ。だが、この開発者Bは問題に対して起こってもいない問題をどんどん付け加えていって、問題を複雑にしている。解決方法を提案しても、また新たな問題を持ち出してくる。
@@ -98,13 +98,15 @@
 #### 「サイバラの原則」(Saibara's Principle)
 
 サイバラ(西原理恵子さん)という漫画家のある漫画に数値などの具体的なところは忘れたが、こういうような式が載っていた:
->1+1=2
->123×456=たくさん
->12÷34+56÷78=そんな問題を解かなければならない状況に自分を持っていかない
+
+>1+1=2<br>
+>123×456=たくさん<br>
+>12÷34+56÷78=そんな問題を解かなければならない状況に自分を持っていかない<br>
 
 ところで、著者は以前、次のような相談をされたことがある:
 
->「バグがいっぱいあってどうにも手が付けられない状態になった場合、どのように修正していけばよいでしょうか? テストとデバッグに、いつもものすごい工数が掛かってしまうので何とかしたいのですが……」
+>「バグがいっぱいあってどうにも手が付けられない状態になった場合、どのように修正していけばよいでしょうか?<br>
+>テストとデバッグに、いつもものすごい工数が掛かってしまうので何とかしたいのですが……」
 
 これは難問である。テスト工程のコスト・ダウンは重要で、かつ、やっかいな問題である。
 
@@ -129,15 +131,15 @@
 
 - シンプルに考えるには:
   - この複雑な問題をどうやって解こうか?
-   - → もっと問題を単純にするにはどうすればよいか?
+    - → もっと問題を単純にするにはどうすればよいか?
   - 将来の複雑な問題にどうやって立ち向かっていくべきだろうか?
-   - → 今後どうやれば問題を複雑にしないで済むだろうか?
+    - → 今後どうやれば問題を複雑にしないで済むだろうか?
   - どうすればよいのだろうか?
-   - → 何をやろうか?
+    - → 何をやろうか?
   - 考え得る解決策をすべて列挙して、そのすべてをよく検討しよう!
-   - → 現在ある解決策を少しずつ実際に試してみよう。実践結果からのフィードバックによって次の手を調整しよう!
+    - → 現在ある解決策を少しずつ実際に試してみよう。実践結果からのフィードバックによって次の手を調整しよう!
   - 障害になるものをすべて列挙し、そのすべてについて対策を練ろう!
-   - → できない・やらない理由ばかり列挙せずに、まずはやり始めて、その結果からフィードバックを得よう!
+    - → できない・やらない理由ばかり列挙せずに、まずはやり始めて、その結果からフィードバックを得よう!
 
 ### 8.1.3 複雑さの種類と対処法
 
