第2章に三角形の周囲を求めるプログラムの例を追加し、ベクトルと三角形の構造体を用いた抽象化を示す

--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -404,6 +404,126 @@ if (IsValid(name)) …
 
 何故かというと、「それが我々には解りやすい」からである。
 
+### 例. 三角形
+
+三角形の周囲(周の長さ)を求めるプログラムを例にあげてみよう。
+三角形の周囲は、3辺の長さの合計であり、各辺の長さは、「三平方の定理(ピタゴラスの定理)」で求められる。
+
+最初のサンプルは、次のものである。
+
+[C#]
+```csharp
+public static double GetTrianglePerimeter(double x1, double y1, double x2, double y2, double x3, double y3)
+    => Math.Sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2)) +
+        Math.Sqrt((x2 - x3) * (x2 - x3) + (y2 - y3) * (y2 - y3)) +
+        Math.Sqrt((x3 - x1) * (x3 - x1) + (y3 - y1) * (y3 - y1));
+```
+
+次では、このメソッドを使って、三角形の周囲を求めている:
+
+[C#]
+```csharp
+var perimeter = GetTrianglePerimeter(x1: 1.0, y1: -1.0, x2: 5.0, y2: -1.0, x3: 5.0, y3: 2.0);
+```
+
+ここから、名前付けで、語彙を作ってみよう。
+
+x と y のペアを「二次元ベクトル」と名付けてみよう。
+
+[C#]
+```csharp
+public struct Vector2D
+{
+    public double X { get; init; }
+    public double Y { get; init; }
+}
+```
+
+すると、元のプログラムはこうなる:
+
+[C#]
+```csharp
+public static double GetTrianglePerimeter(Vector2D vector1, Vector2D vector2, Vector2D vector3)
+    => Math.Sqrt((vector1.X - vector2.X) * (vector1.X - vector2.X) + (vector1.Y - vector2.Y) * (vector1.Y - vector2.Y)) +
+        Math.Sqrt((vector2.X - vector3.X) * (vector2.X - vector3.X) + (vector2.Y - vector3.Y) * (vector2.Y - vector3.Y)) +
+        Math.Sqrt((vector3.X - vector1.X) * (vector3.X - vector1.X) + (vector3.Y - vector1.Y) * (vector3.Y - vector1.Y));
+```
+
+[C#]
+```csharp
+var perimeter = GetTrianglePerimeter(new() { X = 1.0, Y = -1.0}, new() { X = 5.0, Y = -1.0 }, new() { X = 5.0, Y = 2.0 });
+```
+
+ここで、数学的なモデルによって、処理を抽象化してみよう。
+
+**ベクトルの絶対値**
+```math
+\vec{a} = (x, y)
+```
+```math
+\lvert \vec{a} \rvert = \sqrt{x^2+y^2} \
+```
+
+**2点 a とb の距離 d**
+```math
+d = \lvert \vec{a} - \vec{b} \rvert
+```
+
+これを、Vector2D の責務として、追記する:
+
+[C#]
+```csharp
+public struct Vector2D
+{
+    public double X { get; init; }
+    public double Y { get; init; }
+
+    public double Absolute => Math.Sqrt(X * X + Y * Y);
+
+    public static Vector2D operator -(Vector2D vector1, Vector2D vector2)
+        => new Vector2D { X = vector1.X - vector2.X,
+                          Y = vector1.Y - vector2.Y };
+
+    public static double GetDistance(Vector2D vector1, Vector2D vector2)
+        => (vector1 - vector2).Absolute;
+}```
+
+すると、プログラムはこうなる:
+
+[C#]
+```csharp
+public static double GetTrianglePerimeter(Vector2D vector1, Vector2D vector2, Vector2D vector3)
+    => Vector2D.GetDistance(vector1, vector2) +
+        Vector2D.GetDistance(vector2, vector3) +
+        Vector2D.GetDistance(vector3, vector1);
+```
+
+更に、3点を「三角形」と名付けよう:
+
+[C#]
+```csharp
+    public struct Triangle
+    {
+        public Vector2D Vertex1 { get; init; }
+        public Vector2D Vertex2 { get; init; }
+        public Vector2D Vertex3 { get; init; }
+
+        public double Perimeter
+            => Vector2D.GetDistance(Vertex1, Vertex2) +
+               Vector2D.GetDistance(Vertex2, Vertex3) +
+               Vector2D.GetDistance(Vertex3, Vertex1);
+    }
+```
+
+すると、こうなる:
+
+[C#]
+```csharp
+var perimeter = new Triangle { Vertex1 = new() { X = 1.0, Y = -1.0 }, Vertex2 = new() { X = 5.0, Y = -1.0 }, Vertex3 = new() { X = 5.0, Y = 2.0 } }.Perimeter;
+```
+
+数学的なモデルを記述したい場合は、このような記述の方が意図を表現できていると言える。
+
 ## 2.5 サービス指向名前付け(Service Oriented Naming: SON)
 
 ### 2.5.1 インターフェイスによる名前付け
