--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -51,7 +51,30 @@
 
 この分類が重要なのは、美しいコードの価値を正しく理解するためである。美しいコードは機能を直接向上させるものではないが、開発効率と保守性を劇的に改善する。
 
-![品質属性と美しいコードの関係性](Images/code-quality-attributes-comparison.md)
+#### コード品質属性と美しいコードの関係性
+
+##### 品質属性への影響度マトリックス
+
+| 品質属性 | 美しいコードの影響度 | 具体的な効果 | 改善例 |
+|----------|---------------------|-------------|--------|
+| **理解容易性** | ★★★ 直接的 | コードの意図が明確 | 適切な命名、コメント |
+| **変更容易性** | ★★★ 直接的 | 修正・拡張が容易 | 単一責務、疎結合 |
+| **検証性** | ★★★ 直接的 | テストしやすい構造 | 依存性注入、Mock化 |
+| **移植性** | ★★☆ 間接的 | プラットフォーム依存の分離 | 抽象化、インターフェース |
+| **再利用性** | ★★☆ 間接的 | コンポーネント化しやすい | モジュール設計、疎結合 |
+| **信頼性** | ★☆☆ 限定的 | バグ混入のリスク低下 | 明確なロジック、テスト |
+| **使用性** | ★☆☆ 限定的 | APIの使いやすさ向上 | 直感的インターフェース |
+| **効率性** | ★☆☆ 限定的 | 可読性とのトレードオフ | 適切なアルゴリズム選択 |
+
+##### 美しいコードの経済的価値
+
+| 開発フェーズ | 美しいコード | 汚いコード |
+|--------------|--------------|------------|
+| 機能追加 | スムーズ | だんだん困難 |
+| バグ修正 | 原因特定容易 | 調査に時間 |
+| 仕様変更 | 影響範囲明確 | リスク高い |
+| チーム参加 | 理解しやすい | 学習コスト高 |
+| 全体を通して | 長期的に低コスト | 技術的負債が蓄積 |
 
 ### 1.1.3 美しいコードの経済的価値
 
