Implement code changes to enhance functionality and improve performance

--- a/MarkDown/第5章_オブジェクト指向設計の真髄.md
+++ b/MarkDown/第5章_オブジェクト指向設計の真髄.md
@@ -23,6 +23,7 @@
 
 最初に、オブジェクト指向プログラミングの例を示したい。
 
+![ブロック崩しゲーム](Images/5.breakout_game.png)
 - [純粋な JavaScript を使ったブロック崩しゲーム - ゲーム開発 | MDN (mozilla.org)](https://developer.mozilla.org/ja/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript)
   - https://developer.mozilla.org/ja/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript
 
