Implement code changes to enhance functionality and improve performance

--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -49,6 +49,7 @@
 
 例えば、次のような問題を考えてみよう:
 
+![キリンを冷蔵庫に](Images/8.1.giraffe-refrigerator.png)
 >「キリンを冷蔵庫に入れるにはどうする?」<br>
 >(“How do you put a giraffe into a refrigerator?")
 
