プログラミング言語の影響に関するセクションを追加し、言語が思考に与える影響を説明

--- a/MarkDown/第10章_現代的なプログラミング技術と将来展望.md
+++ b/MarkDown/第10章_現代的なプログラミング技術と将来展望.md
@@ -29,7 +29,18 @@
 
 プログラミング言語の進化は、**美しいソースコードのための七箇条**をより自然に実現することを可能にする。C#の進化を振り返ると、各バージョンアップが開発者の「意図を表現」することを支援し、「ノイズを減らす」ことに貢献してきたことがわかる。
 
-> 「言語は考え方のフレームワーク」- 参考資料より
+** 「言語は考え方のフレームワーク」**
+
+人は言語によって考えることが多く、どのような言語を話すか、ということが考え方に大きな影響を与える。
+
+プログラミング言語も同様で、どのようなプログラミング言語を用いるか、によって、プログラミングの時の考え方が大きく変わってくる。
+
+言語の変化によって、プログラミングが影響を受ける。
+
+>"if all you have is a hammer, Everything looks like a nail."<br>
+>(金槌しか持っていなければ、全ての問題は釘に見えてくる)
+
+という言葉がある。良い道具を選ぶことが大切である。
 
 #### C# 1.0からC# 3.0への進化
 
