--- a/MarkDown/第11章_終わりに.md
+++ b/MarkDown/第11章_終わりに.md
@@ -481,12 +481,12 @@ AIは構文的に正しいコードを生成できるが、ビジネスドメイ
 
 #### AIペアプログラミングの実践
 
-AIをペアプログラミングのパートナーとして活用する際、本書の原則は以下のように適用される：
+AIをペアプログラミングのパートナーとして活用する際、本書の原則は以下のように適用される:
 
 **1. プロンプト設計フェーズ**
 ```
 // 効果的なプロンプト例
-「顧客注文処理システムで、以下の責務を持つクラスを設計してください：
+「顧客注文処理システムで、以下の責務を持つクラスを設計してください:
 - 注文の妥当性検証
 - 在庫確認と引当
 - 支払い処理の調整
