--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -9,14 +9,14 @@
 
 ### この章で学べること
 - 命名とモデリングの密接な関係性
-- 「Name and Conquer（定義攻略）」という革新的な問題解決技法
+- 「Name and Conquer(定義攻略)」という革新的な問題解決技法
 - サービス指向名前付け(SON)による効果的な設計手法
-- 語彙（vocabulary）を整えることによる思考の明確化
+- 語彙(vocabulary)を整えることによる思考の明確化
 - 命名のアンチパターンとその対策法
 - 分析モデル、設計モデル、実装モデル間の一貫性維持技法
 
 ### なぜ命名がこれほど重要なのか
-「`tmpWork`や`flg`といった意味不明な変数名を見るたびに、なぜこうなってしまうのか？」あなたもこんな経験があるはずである。命名は、コードの複雑さが最初に現れる場所である。この章で学ぶ命名技法は、単にコードを読みやすくするだけではない。思考を整理し、設計を明確にし、チーム開発における認識の齟齬を解決する強力な武器となる。優れた名前は、優れた設計への第一歩なのである。
+「`tmpWork`や`flg`といった意味不明な変数名を見るたびに、なぜこうなってしまうのか?」あなたもこんな経験があるはずである。命名は、コードの複雑さが最初に現れる場所である。この章で学ぶ命名技法は、単にコードを読みやすくするだけではない。思考を整理し、設計を明確にし、チーム開発における認識の齟齬を解決する強力な武器となる。優れた名前は、優れた設計への第一歩なのである。
 
 ---
 
@@ -265,16 +265,16 @@ Name and Conquer:
 
 を決めるということである。
 
-例えば、或るクラスに “Employee” という名前を付けるということは、
+例えば、或るクラスに “Employee" という名前を付けるということは、
 
-- 「システムの中のこの範囲の概念を  “Employee” と呼ぶことにする」ということ
-  - システム全体という混沌の中から “Employee” という概念を切り出す
-  - “Employee” とそれ以外との間に境界を与え、“Employee” の概念の範囲を決める
+- 「システムの中のこの範囲の概念を  “Employee" と呼ぶことにする」ということ
+  - システム全体という混沌の中から “Employee" という概念を切り出す
+  - “Employee" とそれ以外との間に境界を与え、“Employee" の概念の範囲を決める
   -「Employee なもの」と「それ以外」を決定
 
-![“Employee” という名前付けで概念の範囲を指定](Images/2.3.nameandconquer.2.svg)
+![“Employee" という名前付けで概念の範囲を指定](Images/2.3.nameandconquer.2.svg)
 
-そうして “Employee” という名前付けによって、概念が認識できるようになる。これは、暗黙知の形式知化であるとも言えるであろう。
+そうして “Employee" という名前付けによって、概念が認識できるようになる。これは、暗黙知の形式知化であるとも言えるであろう。
 ![暗黙知の形式知化](Images/2.2.modeling.1.svg)
 
 ### 2.3.2 概念の確定と境界設定
@@ -564,13 +564,13 @@ tele-vision、tele-phone
 ![テレビと電話](Images/2.5.tvandphone.1.png)
 
 ユーザー インターフェイスが名前になっている。
-![テレビ＝インターフェイス](Images/2.5.tvandphone.2.png)
+![テレビ=インターフェイス](Images/2.5.tvandphone.2.png)
 
 つまり、ユーザーにとっては、ユーザー インターフェイスの名前がそのものの名前となるのである。
 
 ところで、システムを開発する目的は、顧客の問題をITで解決することである。
 
-従って、目的 (＝顧客の問題解決) が手段 (＝開発) を駆動するべきであり、クライアント視点が重要である。
+従って、目的 (=顧客の問題解決) が手段 (=開発) を駆動するべきであり、クライアント視点が重要である。
 ![SON](Images/2.5.son.0.svg)
 
 プログラムの内部でも同様に考えてみよう。利用する側のモジュールがクライアントであり、利用される側がサービス提供側である。
@@ -582,8 +582,8 @@ tele-vision、tele-phone
 
 クライアント視点でみると、プログラムで使われている名前は、サービス提供モジュールがクライアント モジュールに提供するインタフェイスであり、クライアントに提供するサービスの名称である。
 
-- **名前＝インタフェイス**
-- **名前＝サービス**
+- **名前=インタフェイス**
+- **名前=サービス**
 
 #### 名前重要。
 
