--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -17,7 +17,7 @@
 - 問題領域に応じたパラダイム選択の戦略
 
 ### なぜマルチパラダイムが重要になったのか
-「このコードはオブジェクト指向で書くべきか、それとも関数型で書くべきか？」という悩みを抱えたことはないだろうか。現代のソフトウェア開発では、単一のパラダイムだけでは解決困難な複雑な問題が増加している。UI、ビジネスロジック、データ処理、並行処理──それぞれに最適なパラダイムは異なる。この章で習得するマルチパラダイム思考は、あなたの問題解決の武器庫を大幅に拡張し、どんな局面でも最適解を見つけ出せる設計力を与えてくれる。
+「このコードはオブジェクト指向で書くべきか、それとも関数型で書くべきか?」という悩みを抱えたことはないだろうか。現代のソフトウェア開発では、単一のパラダイムだけでは解決困難な複雑な問題が増加している。UI、ビジネスロジック、データ処理、並行処理──それぞれに最適なパラダイムは異なる。この章で習得するマルチパラダイム思考は、あなたの問題解決の武器庫を大幅に拡張し、どんな局面でも最適解を見つけ出せる設計力を与えてくれる。
 
 ---
 
