--- a/MarkDown/第5章_オブジェクト指向設計の真髄.md
+++ b/MarkDown/第5章_オブジェクト指向設計の真髄.md
@@ -17,7 +17,7 @@
 - 具象依存から抽象依存への転換戦略
 
 ### オブジェクト指向設計をマスターする意義
-「なぜクラスを分けるのか？」「継承とコンポジションはどう使い分けるのか？」多くのプログラマがオブジェクト指向の技法を知っていても、その本質的な価値を理解していない。この章で学ぶSOLID原則は、混沌とした要求を秩序あるソフトウェア構造に変換する設計思考の基盤である。責務という概念を通じて複雑さを整理し、変更に強いシステムを構築する──これらのスキルは、あなたを単なるコーダーから真の設計者へと成長させる。
+「なぜクラスを分けるのか?」「継承とコンポジションはどう使い分けるのか?」多くのプログラマがオブジェクト指向の技法を知っていても、その本質的な価値を理解していない。この章で学ぶSOLID原則は、混沌とした要求を秩序あるソフトウェア構造に変換する設計思考の基盤である。責務という概念を通じて複雑さを整理し、変更に強いシステムを構築する──これらのスキルは、あなたを単なるコーダーから真の設計者へと成長させる。
 
 ---
 
