--- a/MarkDown/第3章_モデリングとしてのプログラミング.md
+++ b/MarkDown/第3章_モデリングとしてのプログラミング.md
@@ -8,7 +8,7 @@
 プログラミングを単なる「コンピュータへの指示記述」から「知的なモデリング活動」へと認識を転換し、設計・実装・テストを統合した検証可能なモデル構築スキルを習得する。現実世界の複雑さを適切に抽象化し、保守性の高いソフトウェアモデルを構築する能力を身につける。
 
 ### この章で学べること
-- 「ソースコードを書く」行為の真の定義：設計+実装+テスト
+- 「ソースコードを書く」行為の真の定義:設計+実装+テスト
 - 検証可能な設計/実装モデルとしてのソースコードの理解
 - 関心の分離による複雑さの管理技法
 - 抽象化と具体化の適切なバランス調整
