Add new PNG image for vector2d representation

--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -470,18 +470,20 @@ var perimeter = GetTrianglePerimeter(new() { X = 1.0, Y = -1.0}, new() { X = 5.0
 
 ここで、数学的なモデルによって、処理を抽象化してみよう。
 
-**ベクトルの絶対値**
-```math
+**二次元ベクトルの絶対値**
+<!-- ```math
 \vec{a} = (x, y)
 ```
 ```math
 \lvert \vec{a} \rvert = \sqrt{x^2+y^2} \
-```
+``` -->
+![二次元ベクトルの絶対値](Images/2.4.vector2d.png)
 
 **2点 a とb の距離 d**
-```math
+<!-- ```math
 d = \lvert \vec{a} - \vec{b} \rvert
-```
+``` -->
+![2点 a とb の距離 d](Images/2.4.vector.png)
 
 これを、Vector2D の責務として、追記する:
 
