第8章に「判断基準とチェックポイント」を追加し、コーディング技法の演習を整理

--- a/MarkDown/目次.md
+++ b/MarkDown/目次.md
@@ -84,7 +84,8 @@
 8.2 意図を表現するコーディング 
 8.3 エラーハンドリングの最適化 
 8.4 パフォーマンスと可読性のバランス 
-8.5 実践演習:コーディング技法の応用 
+8.5 判断基準とチェックポイント
+8.6 実践演習:コーディング技法の応用 
 
 ### [第9章 チーム開発における品質管理](第9章_チーム開発における品質管理.md)
 9.1 コードレビューの効果的実践 
