--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -1582,11 +1582,52 @@ public class DataProcessorComparison
 }
 ```
 
-![コーディング判断フローチャート](../Images/coding-judgment-flowchart.md)
+## 8.5 判断基準とチェックポイント
 
-## 8.5 実践演習:コーディング技法の応用
+### 8.5.1. コード理解フェーズ
 
-### 8.5.1 演習課題:ログ解析システム
+- **命名確認**: 変数、メソッド、クラス名が意図を表現しているか
+- **コメント確認**: Whyが書かれているか(Howではなく)
+- **テスト確認**: 期待動作を理解できるか
+
+### 8.5.2. 設計原則チェック
+
+| 原則 | チェック項目 | 対策 |
+|------|-------------|------|
+| **単一責務** | 1つのことだけをしているか | クラス/メソッドの分離 |
+| **命名適切性** | 意図が伝わる名前か | SON原則の適用 |
+| **テスト可能性** | テストしやすいか | 依存性の注入、モック化 |
+
+### 8.5.3. 品質判断基準
+
+```
+1. 意図の表現度 (美しいコードの第一原則)
+2. 単一責務度 (美しいコードの第二原則) 
+3. 命名適切度 (美しいコードの第三原則)
+4. 重複排除度 (Once And Only Once)
+5. 抽象度統一 (メソッド記述の適切性)
+6. ルール統一度 (コーディング規約準拠)
+7. テスト容易性 (Testable設計)
+```
+
+### 8.5.4. パフォーマンス vs 可読性のトレードオフ判断
+
+```
+可読性優先 ← → パフォーマンス優先
+
+一般的なケース: 可読性優先
+クリティカルパス: パフォーマンス優先(コメントで補完)
+```
+
+### 8.5.5. レビュー対応指針
+
+- **建設的**: 指摘の意図を理解する
+- **学習機会**: 新しい知識を積極的に吸収
+- **品質向上**: チーム全体の品質向上に貢献
+
+## 8.6 実践演習:コーディング技法の応用
+
+### 8.6.1 演習課題:ログ解析システム
 
 以下の要件に従って、効率的で読みやすいログ解析システムを実装しよう。
 
@@ -1814,7 +1855,7 @@ public class LogAnalysisService
 }
 ```
 
-### 8.5.2 演習のポイント
+### 8.6.2 演習のポイント
 
 #### Think Simpleの実践
 - **単一責務**: 各クラスが明確な責務を持つ
