第4章にプログラミングパラダイム比較を追加し、各パラダイムの特徴や適用場面を整理

--- a/MarkDown/目次.md
+++ b/MarkDown/目次.md
@@ -53,6 +53,7 @@
 4.3 オブジェクト指向パラダイム 
 4.4 関数型プログラミングの活用 
 4.5 実践演習:パラダイムの使い分け 
+4.6 プログラミングパラダイム比較
 
 ### [第5章 オブジェクト指向設計の真髄](第5章_オブジェクト指向設計の真髄.md)
 5.1 単一責務原則の深い理解 
