--- a/MarkDown/第4章_マルチパラダイムプログラミング.md
+++ b/MarkDown/第4章_マルチパラダイムプログラミング.md
@@ -31,8 +31,6 @@
 
 これは、単一のパラダイムに固執するのではなく、問題の性質に応じて最適なパラダイムを選択し、それらを組み合わせて使用することの重要性を示している。
 
-![プログラミングパラダイム比較表](../Images/programming-paradigms-comparison.md)
-
 ### 4.1.2 主要なプログラミングパラダイム
 
 #### 命令型プログラミング(Imperative Programming)
@@ -1420,6 +1418,65 @@ public class StandardDataProcessor
     }
 }
 ```
+## 4.6 プログラミングパラダイム比較
+
+### 4.6.1 パラダイム別特徴比較
+
+| パラダイム | 主要概念 | 適用場面 | 利点 | 注意点 |
+|------------|----------|----------|------|--------|
+| **オブジェクト指向** | カプセル化<br>継承<br>ポリモーフィズム | 複雑なドメインモデル<br>大規模システム<br>保守性重視 | • 現実世界のモデル化<br>• 再利用性<br>• 保守性の向上 | • 過度な抽象化リスク<br>• 学習コストの高さ |
+| **関数型** | 不変性<br>純粋関数<br>高階関数 | データ変換処理<br>並列処理<br>数学的計算 | • 予測可能性<br>• 並列処理の安全性<br>• テストの容易さ | • 学習曲線の急峻さ<br>• パフォーマンス考慮 |
+| **手続き型** | 順次実行<br>制御構造<br>サブルーチン | 単純な処理<br>システムプログラミング<br>スクリプト | • 理解の容易さ<br>• 直感的<br>• 性能の予測可能性 | • 保守性の限界<br>• 再利用の困難さ |
+| **宣言型** | What(何を)<br>記述中心<br>抽象化 | 設定記述<br>クエリ処理<br>ルール定義 | • 意図の明確さ<br>• 簡潔性<br>• 最適化の委任 | • デバッグの困難さ<br>• 制御の制限 |
+
+### 4.6.2 言語別パラダイム対応
+
+| 言語 | オブジェクト指向 | 関数型 | 手続き型 | 宣言型 | 特記事項 |
+|------|:----------------:|:------:|:--------:|:------:|----------|
+| **C#** | ◎ | ○ | ○ | △ | LINQ、async/awaitによる宣言的記述 |
+| **Java** | ◎ | ○ | ○ | △ | Stream API、Lambda式による関数型要素 |
+| **Python** | ◎ | ○ | ◎ | △ | マルチパラダイムの柔軟性が高い |
+| **JavaScript** | ○ | ◎ | ○ | ○ | プロトタイプベースOOP、関数型要素豊富 |
+| **Haskell** | △ | ◎ | × | ◎ | 純粋関数型言語の代表 |
+| **SQL** | × | × | × | ◎ | 宣言型クエリ言語 |
+
+**凡例**: ◎=強力にサポート, ○=サポート, △=部分的サポート, ×=サポートなし
+
+### 4.6.3 問題領域別推奨パラダイム
+
+| 問題領域 | 推奨パラダイム | 理由 | 具体例 |
+|----------|----------------|------|--------|
+| **ビジネスロジック** | オブジェクト指向 + 関数型 | ドメインモデルの表現と<br>ビジネスルールの不変性 | Domain Model,<br>Value Objects |
+| **データ変換** | 関数型 | 副作用なしでの確実な変換 | ETL処理,<br>データパイプライン |
+| **UI制御** | オブジェクト指向 | 状態管理とイベント処理 | MVVMパターン,<br>Component設計 |
+| **設定管理** | 宣言型 | 意図の明確な表現 | JSON/YAML設定,<br>Infrastructure as Code |
+| **アルゴリズム実装** | 手続き型 | 効率的な処理手順の記述 | ソート処理,<br>数値計算 |
+| **並列処理** | 関数型 | 安全な並列実行 | map-reduce,<br>並列ストリーム処理 |
+
+### 4.6.4 パラダイム選択の指針
+
+#### 選択基準
+
+| 観点 | 検討項目 | 評価方法 |
+|------|----------|----------|
+| **問題の性質** | データ中心 vs 振る舞い中心<br>状態変更の頻度<br>並列処理の必要性 | ドメイン分析<br>要件分析 |
+| **チームのスキル** | 習熟度<br>学習コスト<br>メンテナンス能力 | スキル評価<br>トレーニング計画 |
+| **システム要件** | 性能要件<br>保守性要件<br>拡張性要件 | 非機能要件分析<br>品質属性評価 |
+| **技術制約** | 既存システム<br>使用言語<br>フレームワーク | 技術調査<br>互換性評価 |
+
+### 4.6.5 実践的ガイドライン
+
+#### Do's(推奨事項)
+- ✅ 問題に最適なパラダイムを選択
+- ✅ パラダイムの組み合わせを活用
+- ✅ チームのスキルレベルを考慮
+- ✅ 一貫性のあるスタイルを維持
+
+#### Don'ts(避けるべき事項)
+- ❌ 単一パラダイムへの固執
+- ❌ 流行に惑された選択
+- ❌ パラダイムの無秩序な混用
+- ❌ チームのスキルを無視した選択
 
 ## まとめ
 
