Refactor Markdown documents for consistency and clarity
- Updated section titles to use "Testable" instead of "テスタブル" for consistency in terminology.
- Enhanced explanations and examples in the "Why-What-How" thinking framework section.
- Added detailed tables comparing testing strategies and Testable design principles.
- Improved the structure and clarity of the "Testability" section, including anti-patterns and naming conventions for tests.
- Removed outdated images and replaced them with descriptive text for better accessibility.
- Expanded on the practical application of TDD with clear examples and metrics for measuring effectiveness.

--- a/MarkDown/第1章_美しいソースコードの基本原則.md
+++ b/MarkDown/第1章_美しいソースコードの基本原則.md
@@ -91,8 +91,6 @@
 
 「美しいソースコードのための七箇条」は、美しいコードを書くための実践的な指針である。これらの原則は相互に関連し合い、統合的に適用することで最大の効果を発揮する。
 
-![美しいソースコードのための七箇条 概要図](../Images/seven-principles-overview.md)
-
 ### 1.2.1 第一箇条:意図を表現
 
 #### 基本原則
@@ -1035,7 +1033,99 @@ public class RegistrationResult
 - **破(は)**:型を自分なりに変化させる段階 
 - **離(り)**:型を離れて独自のやり方を創造する段階
 
-![守破離とプログラミング学習の段階](../Images/shu-ha-ri-programming-stages.md)
+#### 守破離とプログラミング学習の段階
+
+##### 段階別学習アプローチ
+
+| 段階 | 期間目安 | 学習方法 | 注意点 | 到達目標 |
+|------|----------|----------|--------|----------|
+| **守** | 1-2年 | • 模倣学習<br>• パターン暗記<br>• ツール習得 | • 疑問を持たずに従う<br>• 基本を飛ばさない | 基本パターンの習得 |
+| **破** | 2-5年 | • パターン組み合わせ<br>• 応用問題解決<br>• 改良への挑戦 | • 基本を軽視しない<br>• 闇雲に変更しない | 状況判断力の獲得 |
+| **離** | 5年以上 | • 新技術の創造<br>• 知識の体系化<br>• 他者への指導 | • 独善的にならない<br>• 基本原則を忘れない | 独自スタイルの確立 |
+
+##### プログラミングにおける守破離の実例
+
+###### 守 - 基本の習得段階
+
+```csharp
+// 段階: 守 - 教科書通りの実装
+public class CustomerService
+{
+    public bool IsValid(Customer customer)
+    {
+        if (customer == null)
+            return false;
+        if (string.IsNullOrEmpty(customer.Name))
+            return false;
+        if (string.IsNullOrEmpty(customer.Email))
+            return false;
+        return true;
+    }
+}
+```
+
+###### 破 - 応用と発展段階
+
+```csharp
+// 段階: 破 - パターンの組み合わせと改良
+public class CustomerValidator
+{
+    private readonly List<IValidationRule<Customer>> _rules;
+    
+    public CustomerValidator()
+    {
+        _rules = new List<IValidationRule<Customer>>
+        {
+            new NotNullRule<Customer>(),
+            new RequiredFieldRule<Customer>(c => c.Name),
+            new EmailFormatRule<Customer>(c => c.Email)
+        };
+    }
+    
+    public ValidationResult Validate(Customer customer)
+    {
+        var errors = _rules
+            .Where(rule => !rule.IsValid(customer))
+            .Select(rule => rule.ErrorMessage)
+            .ToList();
+            
+        return new ValidationResult(errors);
+    }
+}
+```
+
+###### 離 - 独自スタイルの確立段階
+
+```csharp
+// 段階: 離 - 独自のフレームワーク創造
+public static class FluentValidation
+{
+    public static ValidatorBuilder<T> For<T>() => new ValidatorBuilder<T>();
+}
+
+// 使用例:独自のDSL(Domain Specific Language)
+var validator = FluentValidation.For<Customer>()
+    .Ensure(c => c.Name).IsNotEmpty().WithMessage("名前は必須です")
+    .Ensure(c => c.Email).IsEmail().WithMessage("有効なメールアドレスを入力してください")
+    .Ensure(c => c.Age).IsBetween(0, 120).WithMessage("年齢は0-120の範囲で入力してください")
+    .Build();
+```
+
+##### 各段階で陥りやすい罠と対策
+
+###### 守段階の罠
+- **完璧主義の罠**: すべてを理解してから先に進もうとする
+- **対策**: まずは動くものを作る経験を積む
+
+###### 破段階の罠
+
+- **複雑化の罠**: 新しい技術や手法を無闇に適用する
+- **対策**: 問題の本質を見極めてから手法を選択
+
+###### 離段階の罠
+
+- **独善化の罠**: 自分の手法に固執し、他者の意見を聞かない
+- **対策**: 継続的な学習と謙虚な姿勢を保つ
 
 ### 1.6.2 プログラミングにおける「守」の段階
 
@@ -1207,8 +1297,45 @@ public class AdvancedCustomerService
 ### 1.7.2 七箇条の習熟度評価
 
 各プログラマが自分のスキルレベルを客観的に評価し、次のステップを明確にするための指針として、以下の評価表を活用できる:
+#### 七箇条の実践レベル評価表
 
-![七箇条の実践レベル評価表](../Images/seven-principles-skill-assessment.md)
+##### レベル別チェックリスト
+
+###### レベル1: 初心者 - 基本の理解
+
+| 箇条 | チェック項目 | 具体例 |
+|------|-------------|-------|
+| (1) 意図を表現 | 変数名に意味がある | `count` より `customerCount` |
+| (2) ノイズを最小化 | 不要なコメントを削除 | `i++; // iをインクリメント` → 削除 |
+| (3) 対称性を保つ | if-else の対称性 | 両方の分岐で同様の処理順序 |
+| (4) 階層化する | メソッドを適切な長さに | 20行以下を目安 |
+| (5) 線形化する | ネストを浅く | if文のネストは3段まで |
+| (6) ルール統一 | 命名規則の統一 | PascalCase vs camelCase の統一 |
+| (7) 自動化する | フォーマッターの使用 | IDEの自動整形機能を活用 |
+
+###### レベル2: 中級者 - パターンの適用
+
+| 箇条 | チェック項目 | 具体例 |
+|------|-------------|-------|
+| (1) 意図を表現 | メソッド名で処理内容を表現 | `process()` → `validateAndSaveCustomer()` |
+| (2) ノイズを最小化 | DRY原則の適用 | 重複コードをメソッド化 |
+| (3) 対称性を保つ | 例外処理の一貫性 | すべての例外で適切なクリーンアップ |
+| (4) 階層化する | レイヤーアーキテクチャ | UI、ビジネス、データアクセス層の分離 |
+| (5) 線形化する | Early Return パターン | ガード句による早期リターン |
+| (6) ルール統一 | 設計パターンの統一 | Factory vs Builder の使い分け |
+| (7) 自動化する | ユニットテスト自動化 | CI/CDでのテスト実行 |
+
+###### レベル3: 上級者 - 原則の統合
+
+| 箇条 | チェック項目 | 具体例 |
+|------|-------------|-------|
+| (1) 意図を表現 | ドメインモデルの表現 | ビジネスルールをコードで直接表現 |
+| (2) ノイズを最小化 | 抽象化レベルの統一 | 詳細実装の隠蔽 |
+| (3) 対称性を保つ | API設計の一貫性 | RESTful APIの統一された動詞使用 |
+| (4) 階層化する | SOLID原則の適用 | 依存関係逆転の原則 |
+| (5) 線形化する | 関数型スタイル | 副作用のない関数の連鎖 |
+| (6) ルール統一 | アーキテクチャ決定記録 | ADRによる設計判断の文書化 |
+| (7) 自動化する | Infrastructure as Code | デプロイ・インフラの自動化 |
 
 この評価表を定期的に使用することで、自分の成長を追跡し、不足している領域を特定できる。また、チーム内での技術レベルの統一や、メンバーの成長支援にも活用できる。
 
