第2章と第3章に説明責任に関するセクションを追加し、ソースコードのモデル化と命名の重要性を強調

--- a/MarkDown/第2章_命名の重要性とベストプラクティス.md
+++ b/MarkDown/第2章_命名の重要性とベストプラクティス.md
@@ -22,6 +22,22 @@
 
 ## 2.1 説明責任(Accountability)
 
+### 説明責任について
+
+**「情報は、持っている側が責任を持って伝えるべき」**
+
+次の二つの情報の伝達方法を考えてみよう:
+
+- プル型:情報を得たい側が、自分で情報を取りにいく
+- プッシュ型:情報提供側が責任を持って相手に情報を届ける
+
+ポイントは以下である:
+
+- 情報は持っている方にコミュニケーションの責任がある
+- 説明責任を果たす: 情報を持っている側からのプッシュ型
+
+### コードの説明責任について
+
 プログラミングでは、意図を伝えることが重要である。
 ![HowからWhatへのパラダイムシフト](../Images/2.1.accountability.1.svg)
 
@@ -122,6 +138,260 @@ public class 日付
 - ソースコードは意図を語るべき
 
 ソースコード自身が**説明責任**を果たすように記述しよう。
+
+### ソースコードの実例
+
+次に実例をあげる。「ソースコードが設計を語る」ように書くことが大切である。
+
+「ソースコードによる意図の見える化」である。
+
+#### 良くないソースコードの例
+
+「クリックされたときにマウス・カーソルの近くにある直線を選択状態にする」というC#のプログラムの例
+
+```csharp
+class Program
+{
+  ……中略……
+
+  // クリック時に、これを呼ぶ
+  bool ClickFunc02(double x1 /* x 座標 */, double y1 /* y 座標 */, int nn /* 数 */)
+  {
+    double[] a, b, c; // 配列
+    int      n = -1;  // 初期値は取りあえず-1にしておく
+    double   d = double.MaxValue;
+                    // 最初は取りあえずdouble.MaxValueかな？
+    int      i;
+    double   d2, d3;
+
+    // a、b、cにデータを読み込む
+    a = new double[nn];
+    b = new double[nn];
+    c = new double[nn];
+
+  ……中略（この間、数十行）……
+
+    // 最も近い直線を検索する
+    for (i = 0; i < a.Length; i++) // 全部の直線に対して
+    {
+      // 点と直線の距離の公式を使う
+      d2 = Math.Sqrt(a[i] * a[i] + b[i] * b[i]);
+      if (d2 != 0.0) // d2が0でなかったら
+      {
+        d3 = Math.Abs(a[i] * x1 + b[i] * y1 + c[i]) / d2;
+        if (d3 < d) // d3がdより小さかったら
+        {
+          d = d3; // dにd3を入れておく
+          n = i;  // このときの i を n に入れておく
+        }
+      }
+    }
+
+    // もし見つからなかったらほかの種類の図形を探す
+    if (n < 0)
+      return false;
+
+    // データの中のn番目の選択フラグを立てる
+
+  ……中略（この間、数十行）……
+
+    // 最も近い直線を検索する
+    for (i = 0; i < a.Length; i++) // 全部の直線に対して
+    {
+      // 点と直線の距離の公式を使う
+      d2 = Math.Sqrt(a[i] * a[i] + b[i] * b[i]);
+      if (d2 != 0.0) // d2が0でなかったら
+      {
+        d3 = Math.Abs(a[i] * x1 + b[i] * y1 + c[i]) / d2;
+        if (d3 < d) // d3がdより小さかったら
+        {
+          d = d3; // dにd3を入れておく
+          n = i;  // このときのiをnに入れておく
+        }
+      }
+    }
+    // データの中を探してi番目の直線を選択表示する
+
+  ……中略（この間、数十行）……
+
+    return true;
+
+    /*  2005/12/31 by tetsu☆彡
+     *   上の方で一度直線は見つかっているので下のループは
+     *   要らないような気がするのですが……
+     */
+
+    /* 2006/01/02 by you.
+       お疲れっす．いえ，念のためですYo．あくまで．
+       # 紅白見ました？ */
+  }
+}
+```
+
+設計を伝えていない、ノイズが多く重要な情報が埋もれてしまっている (S/N比が悪い)、などの問題がある。
+
+※ S/N比: Signal to Noise ratio。S：信号とN：ノイズの比を表すオーディオ用語。
+
+#### 改善例
+
+```csharp
+namespace 幾何
+{
+  public class 点 // (x, y)
+  {
+    double x, y;
+
+    public double X座標 { get { return x; } }
+    public double Y座標 { get { return y; } }
+
+    public double 絶対値
+    {
+      get { return Math.Sqrt(x * x + y * y); }
+    }
+
+    public 点(double x, double y)
+    {
+      this.x = x;
+      this.y = y;
+    }
+  }
+
+  public class 直線 // (ax + by + c = 0)
+  {
+    double a, b, c;
+
+    public double A { get { return a; } }
+    public double B { get { return b; } }
+    public double C { get { return c; } }
+
+    public 直線(double a, double b, double c)
+    {
+      if (a == 0.0 && b == 0.0)
+        throw new ArgumentException("直線やない");
+      this.a = a;
+      this.b = b;
+      this.c = c;
+    }
+  }
+
+  public static class 共通
+  {
+    public static double 距離(直線 line, 点 point)
+    {
+      Debug.Assert(line.A != 0.0 || line.B != 0.0,
+        "あり得へん直線");
+
+      // 点と直線の距離の公式:
+      // 点（x1,y1）と直線（ax+by+c=0）の距離
+      //
+      // |ax1+by1+c|
+      // -----------
+      // (a2 + b2)
+      return Math.Abs(line.A * point.X座標
+        + line.B * point.Y座標 + line.C)
+        / new 点(line.A, line.B).絶対値;
+    }
+  }
+}
+
+namespace CAD
+{
+  abstract class デバイス
+  {
+    ……中略……
+  }
+
+  abstract class 図形
+  {
+    private bool isSelected = false;
+
+    public bool 選択中
+    {
+      get { return isSelected; }
+      set { isSelected = value; }
+    }
+
+    public abstract double 距離(幾何.点 aPoint);
+    public abstract void 描画(デバイス aDevice);
+  }
+
+  class 直線図形 : 図形
+  {
+    幾何.直線 line = null;
+
+    public 幾何.直線 座標
+    {
+      get { return line; }
+      set { line = value; }
+    }
+
+    public 直線図形(幾何.直線 aLine)
+    {
+      line = aLine;
+    }
+
+    public override double 距離(幾何.点 aPoint)
+    {
+      return 幾何.共通.距離(座標, aPoint);
+    }
+    public override void 描画(デバイス aDevice)
+    {
+      ……中略……
+    }
+  }
+
+  class 図面
+  {
+    List<図形> figures = new List<図形>();
+
+    public List<図形> 図形群
+    {
+      get { return figures; }
+    }
+  }
+
+  abstract class コマンド
+  {
+    public abstract void クリック時の処理(デバイス aDevice, 幾何.点 clickedPoint, 図面 aDrawing);
+  }
+
+  class 選択コマンド : コマンド
+  {
+    public override void クリック時の処理(デバイス aDevice, 幾何.点 clickedPoint, 図面 aDrawing)
+    {
+      ある点から最も近い図形の選択(aDevice, clickedPoint, aDrawing);
+    }
+
+    void ある点から最も近い図形の選択(デバイス aDevice, 幾何.点 aPoint, 図面 aDrawing)
+    {
+      図形 nearestFigure =
+        ある点から最も近い図形の検索(aPoint, aDrawing);
+      if (nearestFigure != null)
+      {
+        nearestFigure.選択中 = true;
+        nearestFigure.描画(aDevice);
+      }
+    }
+
+    図形 ある点から最も近い図形の検索(幾何.点 aPoint, 図面 aDrawing)
+    {
+      図形   result          = null;
+      double minimumDistance = double.MaxValue;
+      foreach (図形 aFigure in aDrawing.図形群)
+      {
+        double distance = aFigure.距離(aPoint);
+        if (distance < minimumDistance)
+        {
+          result          = aFigure;
+          minimumDistance = distance;
+        }
+      }
+      return result;
+    }
+  }
+
+  ……中略……
+```
 
 ## 2.2 命名はモデリングの核心
 
