--- a/MarkDown/第3章_モデリングとしてのプログラミング.md
+++ b/MarkDown/第3章_モデリングとしてのプログラミング.md
@@ -16,7 +16,61 @@
 - Why-What-How思考法による段階的問題解決
 - モデル駆動設計の実践的なアプローチ
 
+### モデルとは
+
+>例えば、物体の運動を考えるとしよう。
+>
+>「リンゴを上向きに放ったら、どういう動きをするのだろう?」のようなことである。
+>
+>このときには、問題をシンプルにする。
+>リンゴの色がどうかとか、味がどうかとか、「母は、どこでこのリンゴを買ってきたんだろう?」とか、「そういえば最近母と祖母の嫁姑問題はどうなっているのかな?」とか、そういうものは不要である。
+>運動に関係のある、リンゴの質量とか放ったときの速さとか、そのようなものに着目する。
+>そうして関係のないことを省いて思い切りシンプルにした「物体が運動するときに起こること」を考える。それが**モデル**である。
+
+ソフトウェア開発の**モデル**も似ている。例えば、設計モデルは、ソフトウェア開発全般から、ある視点で設計に関する部分だけを取り出したものである。分析モデルも同様である。
+
+1つ例を挙げると、「社員名簿アプリケーション」を作るとする。そして、その中で社員を表す「社員クラス」というのがモデリングされたとする。このとき、「社員クラス」が持っている属性は、現実の社員が持っとる情報のほんの一部である。現実の社員が、「好きな食べ物」「好みの音楽」「好きなスポーツ」のような情報を持っとったとしても、そのシステムのユーザーの視点からそれらの情報が不要だとしたら、「社員クラス」には入れないだろう。
+
+つまり、関心の外のものを取り去ってシンプルにしたものが**モデル**である。
+
+**モデル**を使うと伝えたいこと（＝関心事）だけをシンプルに伝えられるのである。
+
+### ソースコードでのモデルの表現
+
+ソースコードでモデルを表現する上で、最も肝となるのは、**名前をちゃんと付けること**である。
+
+そもそも名前付けは、モデリング(設計行為)なのである。
+
+**「名前付けはモデリングの入り口」**
+
+例えば、CADを作るとする。「2点をマウスでクリックすると1本の線分が追加できる」とする。
+
+このとき、この「2点がクリックされたら、線分を追加する」いう仕事をさせるクラスを作るのが普通である。
+
+このクラスの責務は、「クリックされることを受けて線分をデータとして登録すること」である。このクラスに「線分追加コマンド」と名前を付けたとする。
+
+```csharp
+class 線分追加コマンド
+{
+}
+```
+
+このときの名前は、この責務を持った、その人にとっての「概念モデル」と一致させなければならない。
+
+ところが、多分この話の順番は逆で、実際には名前を付けることによって、「概念モデル」が出来上がっているのである。名前が付いて初めて、概念とその範囲が確立する。ほかの概念との境界も決まる。
+
+「線分追加コマンド」の例でいうと「線分追加コマンド」と名前が座ったことで、このクラスの概念や責務の範囲が腰を据える。それゆえ、「名前付け」いうのは、大切なモデリングなのである。
+
+それからもう1つ。「頭の中にある『それ』をどう呼ぶようにするか」を決めるということは、自分の中にしかなかった、ある関心の範囲の概念、つまり暗黙知でしかなかった概念を、他人にも分かるようにする、つまり形式知化する作業なのである。
+
+「線分追加コマンド」の例でいうと、「線分追加コマンド」という名前がないうちは、その概念を他人に伝えるのは困難なことなのである。名前が決まって初めてコミュニケーションに使える。つまり、これはコミュニケーションのためのモデリングである、ということもできる。
+
+つまりは、「ちゃんとした名前を付けよう」いうことである。適切な名前が付いてないということは、そのクラスなりメソッドなり変数なりの責務・役割がはっきりしていない、他のクラスやメソッドや変数との責務・役割の境界もはっきりしてない、いうことである。
+
+もし、「ある人の付けた名前＝その人の概念モデル」となっていないと、伝えたい概念が正しく伝わらない。すなわち、コミュニケーションに支障が生じるいうことになる。
+
 ### モデリング思考がもたらす革命的変化
+
 多くのプログラマが「仕様書通りにコードを書く」という受動的な姿勢に留まっている。しかし、真のプログラミングは能動的なモデリング活動である。この章で習得するモデリング思考は、あなたの問題解決能力を根本的に変革する。複雑な業務要求を整理された概念モデルに変換し、それを検証可能なコードとして実現する──この一連のプロセスを身につけることで、プログラマから設計者へと成長することができる。
 
 ---
