--- a/MarkDown/第8章_実践的なコーディング手法.md
+++ b/MarkDown/第8章_実践的なコーディング手法.md
@@ -115,7 +115,7 @@
 
 ことである。
 
-日ごろからなるべくシンプルなコーディングを心掛ける。リファクタリングにより、ソース・コードをなるべく複雑にしない。また、常にテストが走る環境で開発し、レビューなどのフィードバックも継続的に実施する。
+日ごろからなるべくシンプルなコーディングを心掛ける。リファクタリングにより、ソースコードをなるべく複雑にしない。また、常にテストが走る環境で開発し、レビューなどのフィードバックも継続的に実施する。
 
 そうすることで、「『バグがあり過ぎてどうにも手が付けられなくなるような状態』に自分を持っていかない」ということである。
 
