第11章にフィードバック促進ツールのセクションを追加し、第2章から説明責任に関する内容を削除して整理

--- a/MarkDown/第11章_終わりに.md
+++ b/MarkDown/第11章_終わりに.md
@@ -180,6 +180,16 @@ public class CustomerAggregateService
 
 **フィードバックの最大化**は、継続的な成長のための鍵である。
 
+#### 実装時のフィードバックを促進するのに役立つツールのいろいろ
+
+| ツール | 例 |
+| ---- | ---- |
+| コンパイラ | C# コンパイラなど |
+| コード分析 | Visual Studio のコード分析ツール(動的分析、静的分析、プロファイラ)、FxCop、Simian など |
+| 単体テスト | Visual Studio の単体テスト、NUnit、JUnit、Moch など |
+| その他のテスト | Web テスト、Selenium、ロード・テスト、テスト管理、カバレッジ、NCover など |
+| 継続的インテグレーション (CI) ツール | GitHub、Jenkins、Azure DevOps など |
+
 _[C#]_
 ```csharp
 // フィードバックループの実装例
