--- a/MarkDown/第3章_モデリングとしてのプログラミング.md
+++ b/MarkDown/第3章_モデリングとしてのプログラミング.md
@@ -35,6 +35,10 @@
 
 **モデル**を使うと伝えたいこと（＝関心事）だけをシンプルに伝えられるのである。
 
+多くの情報を提供することが重要なのではない。伝えるべき情報が伝わることが重要なのである。
+
+**「つぶさにいうのと、的確にいうのは違う」**
+
 ### ソースコードでのモデルの表現
 
 ソースコードでモデルを表現する上で、最も肝となるのは、**名前をちゃんと付けること**である。
