Fix appendix A title and add detailed content for "美しいソースコードのための七箇条" including principles, examples, and guidelines for better code quality.

--- a/MarkDown/目次.md
+++ b/MarkDown/目次.md
@@ -119,7 +119,7 @@
 
 ## 付録
 
-### [付録A 美しいソースコードのための七箇条（詳細版）](付録A_美しいソースコードのための七箇条（詳細版）.md)
+### [付録A 美しいソースコードのための七箇条](付録A_美しいソースコードのための七箇条.md)
 ### [付録B 命名規則とコーディング規約例](付録B_命名規則とコーディング規約例.md)
 ### [付録C リファクタリングパターン集](付録C_リファクタリングパターン集.md)
 ### [付録D 新人プログラマーのための「コーディングの心得」Q&A](付録D_新人プログラマーのためのコーディングの心得Q&A.md)
